drkns 21.06.2020 22:47:28 +0100 - build 5625

1. Рефакторинг.

drkns 20.06.2020 18:27:17 +0100 - build 5624

1. Продолжение 3449 - удаление в обход корзины доступно при любых ошибках, т.к. ОС в общем случае возвращает что попало.

svs 19.06.2020 00:24:34 +0300 - build 5623

1. SQLite 3.32.3

drkns 17.06.2020 19:50:37 +0100 - build 5622

1. Диалог прогресса копирования корректно отображает времена более 100 часов.

drkns 17.06.2020 08:40:49 +0100 - build 5621

1. Опечатка в 5620.

drkns 17.06.2020 01:01:01 +0100 - build 5620

1. Некорректная обработка флагов в DialogBuilder.

2. Уточнения сообщений об ошибках переключения кодовых страниц.

3. Рефакторинг.

drkns 16.06.2020 02:25:55 +0100 - build 5619

1. Уточнение 5618.

drkns 15.06.2020 21:22:23 +0100 - build 5618

1. В некоторых случаях некорректно определялся тип CD-привода.

2. Рефакторинг.

shmuel 09.06.2020 16:37:06 +0300 - build 5617

1. Откат 5613.

svs 08.06.2020 20:49:34 +0300 - build 5616

1. SQLite 3.32.2

drkns 01.06.2020 02:05:40 +0100 - build 5615

1. Рефакторинг.

drkns 30.05.2020 20:22:00 +0100 - build 5614

1. Убрана зависимость FarDlgBuilder.hpp от DlgBuilder.hpp.
   DlgBuilder.hpp теперь используется только в плагинах.

shmuel 30.05.2020 19:39:20 +0300 - build 5613

1. Экспериментально: не будем прятать окошки прогресса (например, копирования) при исполнении макроса.

drkns 29.05.2020 18:57:47 +0100 - build 5612

1. В некоторых случаях не удалялись описания файлов.

2. Рефакторинг.

3. Warnings.

svs 27.05.2020 21:30:18 +0300 - build 5611

1. SQLite 3.32.1

drkns 26.05.2020 08:45:08 +0100 - build 5610

1. Уточнение 5608.

svs 26.05.2020 10:38:50 +0300 - build 5609

1. SQLite 3.32.0

drkns 25.05.2020 16:27:26 +0100 - build 5608

1. Некорректно создавались символические ссылки.

2. В диалоге атрибутов некорректно отображались сетевые диски.

3. Рефакторинг. Выкинуто много копипасты.

drkns 24.05.2020 20:53:25 +0100 - build 5607

1. Новые версии fmt, tinyxml2, Catch2.

2. Warnings.
