@@ -1,3 +1,7 @@
+drkns 24.06.2020 17:33:33 +0100 - build 5626
+
+1. 0003804: "Save file position" option doesn't work in editor and viewer.
+
 drkns 21.06.2020 22:47:28 +0100 - build 5625
 
 1. Refactoring.
