@@ -220,7 +220,7 @@ public:
 	const auto& Factories() const { return PluginFactories; }
 
 	static void ConfigureCurrent(Plugin *pPlugin, const GUID& Guid);
-	static int UseFarCommand(const plugin_panel* hPlugin, int CommandType);
+	static bool UseInternalCommand(const plugin_panel* hPlugin, int CommandType, OpenPanelInfo const& Info);
 	static const GUID& GetGUID(const plugin_panel* hPlugin);
 	static bool SetHotKeyDialog(Plugin *pPlugin, const GUID& Guid, hotkey_type HotKeyType, string_view DlgPluginTitle);
 	static void ShowPluginInfo(Plugin *pPlugin, const GUID& Guid);
